--- a/app/src/main/res/layout/activity_chat_box.xml
+++ b/app/src/main/res/layout/activity_chat_box.xml
@@ -30,13 +30,6 @@
                 android:textSize="30sp"
                 android:typeface="sans"/>
 
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:iconifiedByDefault="true"
-                android:queryHint="Search"
-                android:layout_weight="1"/>
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
@@ -47,6 +40,7 @@
         android:layout_height="match_parent"
         android:foregroundGravity="bottom"
         android:layout_marginTop="5dp"
+        android:layout_below="@+id/displayName"
         android:layout_above="@id/msg_cv"/>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -90,11 +84,6 @@
                     android:layout_height="wrap_content"
                     android:text="S" />
 
-                <Button
-                    android:id="@+id/r"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="R" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
